--- a/src/app/shared/layout/base-layout/partials/base-header/base-header.component.html
+++ b/src/app/shared/layout/base-layout/partials/base-header/base-header.component.html
@@ -1,10 +1,10 @@
 <div class="w-full items-center bg-gray-300 p-4 flex justify-between">
     <h2 class="font-bold">
-        Dashboard {{ this.authStore.accessToken() }}
+        Dashboard
     </h2>
 
-    <button class="bg-slate-800 p-2 font-bold text-white text-md rounded-lg" (click)="getToken()">
-        Refresh token
+    <button class="bg-slate-800 p-2 font-bold text-white text-md rounded-lg" (click)="authorize()">
+        Authorize
     </button>
 
 </div>
