tracks list && api intefaces/mappers refactor

--- a/src/app/components/dashboard/components/main.component.html
+++ b/src/app/components/dashboard/components/main.component.html
@@ -1,3 +1,9 @@
 <div class="p-4">
-    <app-top-artists/>
+    <div class="mb-2">
+        <app-top-artists/>
+    </div>
+
+    <div class="mb-2">
+        <app-top-tracks/>
+    </div>
 </div>
