--- a/src/app/components/dashboard/components/partials/topArtists/top-artists.component.html
+++ b/src/app/components/dashboard/components/partials/topArtists/top-artists.component.html
@@ -1,6 +1,9 @@
 <div>
+    <h3 class="font-bold">
+        Artists
+    </h3>
+
     <app-artists-list
         [artists]="this.dashboardStore.topArtists()"
     />
-
 </div>
