--- a/src/app/components/dashboard/components/partials/topArtists/partials/artistsList/artists-list.component.html
+++ b/src/app/components/dashboard/components/partials/topArtists/partials/artistsList/artists-list.component.html
@@ -1,5 +1,5 @@
 <div>
     @for (artist of this.artists(); track artist.id) {
-        <app-artists-item [artist]="artist"/>
+        <app-artists-list-item [artist]="artist"/>
     }
 </div>
